@@ -8,13 +8,13 @@ class Solution {
         for (int i = 0; i < operations.length; i++) {
             switch (operations[i]) {
                 case "+":
-                   arrayList.add(arrayList.getLast() + arrayList.get(arrayList.size() - 2));
+                    arrayList.add(arrayList.get(arrayList.size() - 1) + arrayList.get(arrayList.size() - 2));
                     break;
                 case "D":
-                    arrayList.add(arrayList.getLast() * 2);
+                    arrayList.add(arrayList.get(arrayList.size() - 1) * 2);
                     break;
                 case "C":
-                    arrayList.removeLast();
+                    arrayList.remove(arrayList.size() - 1);
                     break;
                 default:
                     arrayList.add(Integer.parseInt(operations[i]));
